# NNSegmentation

./: CMakeLists.txt  GRNNCRFMLLabeler.cpp  GRNNCRFMLLabeler.h  GRNNCRFMMLabeler.cpp  GRNNCRFMMLabeler.h  GRNNLabeler.cpp  GRNNLabeler.h  GatedCRFMLLabeler.cpp  GatedCRFMLLabeler.h  GatedCRFMMLabeler.cpp  GatedCRFMMLabeler.h  GatedLabeler.cpp  GatedLabeler.h  LSTMCRFMLLabeler.cpp  LSTMCRFMLLabeler.h  LSTMCRFMMLabeler.cpp  LSTMCRFMMLabeler.h  LSTMLabeler.cpp  LSTMLabeler.h  Options.h  README.md  RNNCRFMLLabeler.cpp  RNNCRFMLLabeler.h  RNNCRFMMLabeler.cpp  RNNCRFMMLabeler.h  RNNLabeler.cpp  RNNLabeler.h  SparseCRFMLLabeler.cpp  SparseCRFMLLabeler.h  SparseCRFMMLabeler.cpp  SparseCRFMMLabeler.h  SparseGRNNCRFMLLabeler.cpp  SparseGRNNCRFMLLabeler.h  SparseGRNNCRFMMLabeler.cpp  SparseGRNNCRFMMLabeler.h  SparseGRNNLabeler.cpp  SparseGRNNLabeler.h  SparseGatedCRFMLLabeler.cpp  SparseGatedCRFMLLabeler.h  SparseGatedCRFMMLabeler.cpp  (+30 more)
basic/: Example.h  Feature.h  GRNNCRFMLClassifier.h  GRNNCRFMMClassifier.h  GRNNClassifier.h  GatedCRFMLClassifier.h  GatedCRFMMClassifier.h  GatedClassifier.h  Instance.h  InstanceReader.h  InstanceWriter.h  LSTMCRFMLClassifier.h  LSTMCRFMMClassifier.h  LSTMClassifier.h  Pipe.h  RNNCRFMLClassifier.h  RNNCRFMMClassifier.h  RNNClassifier.h  SparseCRFMLClassifier.h  SparseCRFMMClassifier.h  SparseClassifier.h  SparseGRNNCRFMLClassifier.h  SparseGRNNCRFMMClassifier.h  SparseGRNNClassifier.h  SparseGatedCRFMLClassifier.h  SparseGatedCRFMMClassifier.h  SparseGatedClassifier.h  SparseLSTMCRFMLClassifier.h  SparseLSTMCRFMMClassifier.h  SparseLSTMClassifier.h  SparseRNNCRFMLClassifier.h  SparseRNNCRFMMClassifier.h  SparseRNNClassifier.h  SparseTNNCRFMLClassifier.h  SparseTNNCRFMMClassifier.h  SparseTNNClassifier.h  TNNCRFMLClassifier.h  TNNCRFMMClassifier.h  TNNClassifier.h  Writer.h
example/: readme.md  run.sh
example/options/: option.lstm  option.sparse  option.sparse+lstm
